http://bugs.dwscoalition.org/show_bug.cgi?id=2965
Tweak body background to be a more neutral color. Also, remove the background for overflowing content, because these can just now go over the current body.

Patch by fu.

--- a/htdocs/stc/tropo/tropo-base.css
+++ b/htdocs/stc/tropo/tropo-base.css
@@ -44,9 +44,11 @@ body {
 #canvas {
     font-size: .75em;
     line-height: 1.5;
-    margin: 2em 0 2em 0;
+    margin: 0;
     width: 92%;
     padding: 0 4%;
+    border-style: solid;
+    border-width: 2em 0;
 }
 #page {
     max-width: 80em;
