--- a/htdocs/stc/tropo/tropo-purple.css
+++ b/htdocs/stc/tropo/tropo-purple.css
@@ -36,7 +36,7 @@
  */
 
 body {
-    background-color: #3a155a;
+    background-color: #f7f7f7;
     color: #111;
 }
 
@@ -56,6 +56,7 @@ a:active,
 }
 #canvas {
     background-color: #f7f7f7;
+    border-color: #3a155a;
 }
 
 /**
@@ -843,10 +844,5 @@ div.adult_warning {
     background-color: #f3d2fc;
 }
 .userslist-table tr.even {
-    background-color: #f7f7f7;
-}
-
-/* for items which could have wide content, that could overflow outside the bounds of #content */
-#page_talkread  #Comments .talk-comment td.commentbody {
     background-color: #f7f7f7;
 }
