--- a/htdocs/stc/tropo/tropo-red.css
+++ b/htdocs/stc/tropo/tropo-red.css
@@ -34,7 +34,7 @@
  */
 
 body {
-    background-color: #c1272d;
+    background-color: #f7f7f7;
     color: #111;
 }
 
@@ -54,6 +54,7 @@ a:active,
 }
 #canvas {
     background-color: #f7f7f7;
+    border-color: #c1272d;
 }
 
 /**
@@ -842,9 +843,4 @@ div.adult_warning {
 }
 .userslist-table tr.even {
     background-color: #fff;
-}
-
-/* for items which could have wide content, that could overflow outside the bounds of #content */
-#page_talkread  #Comments .talk-comment td.commentbody {
-    background-color: #f7f7f7;
 }
